<resources>
    <string name="app_name">Stalker notes</string>
    <!--    Screen main-->
    <string name="danger">DANGER</string>
    <string name="database">DATABASE</string>
    <string name="map">OBSERVE</string>
    <string name="hello">Welcome to the HELL</string>

    <!--    Screen Danger-->
    <string name="hello_danger">danger</string>
<!--    <string name="back_danger">back to main menu</string>-->

    <!--    Screen DataBase-->
    <string name="hello_DataBase">not worth going there</string>
    <string name="refresh">Refresh</string>
    <string name="add">Add</string>
    <string name="delete">Delete All</string>
    <string name="delete_record">delete</string>
    <string name="change_record">change</string>
<!--    Show Dialig-->
    <string name="title_dialog">Serious question</string>
    <string name="message_dialog">Are you sure?</string>
    <string name="positive_dialog">|| SURELY! ||</string>
    <string name="negative_dialog">|| Wait… ||</string>
<!--    Title conyext menu-->
    <string name="title_context_menu">make no mistake</string>

    <!--    Screen Position-->
    <string name="position">POSITION</string>
    <string name="text_activity">danger is near…</string>
    <string name="buttonCurrentMap">MAP</string>
    <string name="buttonOk">OK!</string>
    <string name="spinnerDanger">Danger choosing</string>
    <string name="descr_danger">Description</string>
    <string name="waite">wait…</string>

<!--    Screen Observe-->
    <string name="hello_Observe">Always look around…</string>
    <string name="button1_Observe">UPDATE</string>
    <string name="button2_Observe">Button 2</string>
    <string name="text_view_description">description</string>
    <string name="text_view_distance">distance</string>
<!--    Menu Observe-->
    <string name="menu_short">short text</string>
    <string name="menu_long">long text</string>


</resources>