<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <TextView
        style="@style/styleTextPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/hello" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        style="@style/styleButton">


        <Button
            android:id="@+id/buttonDanger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/danger"
            style="@style/styleButton" />
<!--            android:background="" />-->

        <Button
            android:id="@+id/buttonDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/database"
            style="@style/styleButton"/>
<!--            android:background="" />-->

        <Button
            android:id="@+id/buttonMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/map"
            style="@style/styleButton"/>
<!--            android:background="" />-->
    </LinearLayout>


</LinearLayout>