<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_200"
    tools:context=".DataBase">

    <TextView
        android:id="@+id/textViewDataBase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/styleTextPosition"
        android:text="@string/hello_DataBase" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        >

        <Button
            android:id="@+id/butRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/styleButtonDataBase"
            android:text="@string/refresh" />

        <Button
            android:id="@+id/butAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/styleButtonDataBase"
            android:text="@string/add" />

        <Button
            android:id="@+id/butDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/styleButtonDataBase"
            android:text="@string/delete" />
    </LinearLayout>

<!--    <ListView-->
<!--        android:id="@+id/listDanger"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/purple_700"-->
<!--        android:divider="@color/purple_200"-->
<!--        android:dividerHeight="2dp"-->
<!--        android:padding="5dp" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewDataBase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/button_margin_data_base"
        android:scrollbars="vertical"
        />

</LinearLayout>